--- a/.github/workflows/main_mtwallet-backend.yml
+++ b/.github/workflows/main_mtwallet-backend.yml
@@ -19,22 +19,28 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '24.x'
+          node-version: '20.x'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build app
         run: npm run build
+
+      - name: Create deployment package
+        run: |
+          # Create a clean deployment directory
+          mkdir -p deploy
+          cp -r dist deploy/
+          cp -r node_modules deploy/
+          cp package.json deploy/
+          cp package-lock.json deploy/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: |
-            dist
-            node_modules
-            package.json
+          path: deploy
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,3 +68,4 @@ jobs:
           app-name: 'mtwallet-backend'
           slot-name: 'Production'
           package: .
+          startup-command: 'node dist/index.js'
