--- a/.github/workflows/main_mtwallet-backend.yml
+++ b/.github/workflows/main_mtwallet-backend.yml
@@ -21,26 +21,22 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build app
-        run: npm run build
-
-      - name: Create deployment package
+      - name: Install all dependencies and build
         run: |
-          # Create a clean deployment directory
-          mkdir -p deploy
-          cp -r dist deploy/
-          cp -r node_modules deploy/
-          cp package.json deploy/
-          cp package-lock.json deploy/
+          npm ci
+          npm run build
+
+      - name: Prune dev dependencies
+        run: npm prune --omit=dev
+
+      - name: Create deployment zip
+        run: zip -r deploy.zip dist/ node_modules/ package.json
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: deploy
+          path: deploy.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -67,5 +63,5 @@ jobs:
         with:
           app-name: 'mtwallet-backend'
           slot-name: 'Production'
-          package: .
+          package: deploy.zip
           startup-command: 'node dist/index.js'
